# STM32f4_template

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c  startup_stm32f40_41xxx.s
src/: CMakeLists.txt  my_lib.c  my_lib.h
